--- a/FigurineCuisine/Pages/Products/ProductView.cshtml
+++ b/FigurineCuisine/Pages/Products/ProductView.cshtml
@@ -63,7 +63,7 @@
                             <div class="number">
                                 <input asp-for="CartItems.ID" class="form-control" type="hidden" value="@User.Identity.Name.ToString()" />
                                 <span class="minus">-</span>
-                                <input asp-for="CartItems.Quantity" class="form-control" type="text" value="1" />
+                                <input asp-for="CartItems.Quantity" class="quantity" type="text" value="1" />
                                 <span asp-validation-for="CartItems.Quantity" class="text-danger"></span>
                                 <span class="plus">+</span>
                                 <p>&nbsp;</p>
