--- a/FigurineCuisine/Pages/Products/ProductView.cshtml
+++ b/FigurineCuisine/Pages/Products/ProductView.cshtml
@@ -61,7 +61,7 @@
                     {
                         <form id="add-to-cart "method="post">
                             <div class="number">
-                                <input asp-for="Category" class="quantity" type="hidden" value="@Model.selectedProduct.Category" />
+                                <input asp-for="Category" class="category" type="hidden" value="@Model.selectedProduct.Category" />
                                 <span class="minus">-</span>
                                 <input asp-for="Input.Quantity" class="quantity" type="text" value="1" />
                                 <span asp-validation-for="Input.Quantity" class="text-danger"></span>
